--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100vh;
+}
+
+#__div {
+  height: 100%;
 }
 
 a {
@@ -13,4 +18,5 @@ a {
 
 * {
   box-sizing: border-box;
+  font-size: 1rem;
 }
