--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,10 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   height: 100vh;
+  overflow: hidden;
 }
 
-#__div {
+#__next {
   height: 100%;
+  overflow: hidden;
 }
 
 a {
@@ -18,5 +20,5 @@ a {
 
 * {
   box-sizing: border-box;
-  font-size: 1rem;
+  margin: 0;
 }
