--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   overflow: hidden !important;
   -webkit-overflow-scrolling: touch !important;
+  scroll-behavior: smooth !important;
 }
 
 #__next {
